[project]
name = "kfp_component_lib"
version = "0.1.0.dev0"
description = "A reusable component library for Kubeflow Pipelines."
readme = "README.md"
authors = [
  { name="Alex Ioannides", email="alex@bodyworkml.com" },
]
dependencies = [
  "kfp==2.5.*",
  "numpy==1.26.4",
  "pandas==2.2.*",
  "pyarrow==15.0.*",
]

[project.optional-dependencies]
dev = [
  "black==23.9.1",
  "python-dotenv>=1.0.0",
  "icecream",
  "ipython",
  "mypy==1.5.1",
  "nox==2023.4.22",
  "pytest==7.4.2",
  "ruff==0.0.290",
  "pandas-stubs==2.1.*",
]
deploy = [
  "build>=1.0.0",
  "pip>=23.2.0",
  "setuptools>=68.0.0",
  "twine>=4.0.0",
  "wheel>=0.41.0",
]

[project.urls]
"Homepage" = "https://github.com/AlexIoannides/kfp-component-lib"
"Bug Tracker" = "https://github.com/AlexIoannides/kfp-component-lib/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
src = ["src"]
target-version = "py310"
line-length = 88
select = [
  "D",   # pydocstyle
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  "D203",    # fix pydocstyle warning
  "D213",    # fix pydocstyle warning
]

[tool.ruff.per-file-ignores]
"tests/*" = [
  "D103",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = [
  "kfp",
]
ignore_missing_imports = true
